Removed redundant code in Main related to whether the user specified a SNP list